# C

./: CMakeLists.txt  README.md
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: ProgramasC.1694774340816.pdom  ProgramasC.language.settings.xml  ProgramasCFonte.1694776114233.pdom  ProgramasCFonte.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 100.snap  127.snap  138.snap  145.snap  158.snap  165.snap  166.snap  167.snap  173.snap  178.snap  2.snap  53.snap  56.snap  90.snap  91.snap  93.snap  95.snap
.metadata/.plugins/org.eclipse.core.resources/.root/: 102.tree  104.tree  105.tree  107.tree  109.tree  110.tree  114.tree  115.tree  116.tree  120.tree  127.tree  134.tree  136.tree  137.tree  138.tree  144.tree  145.tree  151.tree  152.tree  153.tree  155.tree  156.tree  157.tree  163.tree  164.tree  165.tree  166.tree  167.tree  169.tree  171.tree  172.tree  173.tree  176.tree  178.tree  179.tree  2.tree  31.tree  32.tree  33.tree  34.tree  (+31 more)
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: ProgramasC.launch
.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.search/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
ProgramasC/: .cproject  as_moedas_de_robbie.c  comparacao_de_substring.c  exercicio61.c  jogo_das_aranhas.c  o_maior.c  teste02.c  tipos_de_triangulos.c
ProgramasC/Debug/: 02-implementando-a-busca-binaria.d  ProgramasC  ProgramasC [conflicted 100]  ProgramasC [conflicted 101]  ProgramasC [conflicted 102]  ProgramasC [conflicted 103]  ProgramasC [conflicted 104]  ProgramasC [conflicted 105]  ProgramasC [conflicted 106]  ProgramasC [conflicted 107]  ProgramasC [conflicted 108]  ProgramasC [conflicted 109]  ProgramasC [conflicted 10]  ProgramasC [conflicted 110]  ProgramasC [conflicted 111]  ProgramasC [conflicted 112]  ProgramasC [conflicted 113]  ProgramasC [conflicted 114]  ProgramasC [conflicted 115]  ProgramasC [conflicted 116]  ProgramasC [conflicted 117]  ProgramasC [conflicted 118]  ProgramasC [conflicted 119]  ProgramasC [conflicted 11]  ProgramasC [conflicted 120]  ProgramasC [conflicted 121]  ProgramasC [conflicted 122]  ProgramasC [conflicted 123]  ProgramasC [conflicted 124]  ProgramasC [conflicted 125]  ProgramasC [conflicted 126]  ProgramasC [conflicted 12]  ProgramasC [conflicted 13]  ProgramasC [conflicted 14]  ProgramasC [conflicted 15]  ProgramasC [conflicted 16]  ProgramasC [conflicted 17]  ProgramasC [conflicted 18]  ProgramasC [conflicted 19]  ProgramasC [conflicted 20]  (+150 more)
ProgramasC/Debug/ProgramasCFonte/: subdir.mk
ProgramasC/Debug/ProgramsCFonte/: subdir.mk
ProgramasCFonte/: .cproject  .project  teste01.c
ProgramasCFonte/Debug/: makefile  sources.mk  subdir.mk  teste01.d
ProgramasCFonte/Debug/CodeAbbey/: number_of_steps_in_euclidean_algorithm.d  problem022.d  problem297.d  problem359.d  subdir.mk
ProgramasCFonte/Debug/GeekUniversity/secao03/: exercicio01.d  exercicio02.d  exercicio03.d  exercicio04.d  exercicio05.d  exercicio06.d  exercicio07.d  exercicio08.d  exercicio09.d  exercicio10.d  exercicio11.d  exercicio12.d  exercicio13.d  exercicio14.d  exercicio15.d  exercicio16.d  exercicio17.d  exercicio18.d  exercicio19.d  exercicio20.d  exercicio21.d  exercicio22.d  exercicio23.d  exercicio24.d  exercicio25.d  exercicio26.d  exercicio27.d  exercicio28.d  exercicio29.d  exercicio30.d  exercicio31.d  exercicio32.d  exercicio33.d  exercicio34.d  exercicio35.d  exercicio36.d  exercicio37.d  exercicio38.d  exercicio39.d  exercicio40.d  (+14 more)
ProgramasCFonte/Debug/GeekUniversity/secao04/: exercicio01.d  exercicio02.d  exercicio03.d  exercicio04.d  exercicio05.d  exercicio06.d  exercicio07.d  exercicio08.d  exercicio09.d  exercicio10.d  exercicio11.d  exercicio12.d  exercicio13.d  exercicio14.d  exercicio15.d  exercicio16.d  exercicio17.d  exercicio18.d  exercicio19.d  exercicio20.d  exercicio21.d  exercicio22.d  exercicio23.d  exercicio24.d  exercicio25.d  exercicio26.d  exercicio27.d  exercicio28.d  exercicio29.d  exercicio30.d  exercicio31.d  exercicio32.d  exercicio33.d  exercicio34.d  exercicio35.d  exercicio36.d  exercicio37.d  exercicio39.d  exercicio40.d  exercicio41.d  (+1 more)
ProgramasCFonte/Debug/GeekUniversity/secao05/: exercicio01.d  exercicio02.d  exercicio03.d  exercicio04.d  exercicio05.d  exercicio06.d  exercicio07.d  exercicio08.d  exercicio09.d  exercicio10.d  exercicio11.d  exercicio12.d  exercicio13.d  exercicio14.d  exercicio15.d  exercicio16.d  exercicio17.d  exercicio18.d  exercicio19.d  exercicio20.d  exercicio21.d  exercicio22.d  exercicio23.d  exercicio24.d  exercicio25.d  exercicio26.d  exercicio27.d  exercicio28.d  exercicio29.d  exercicio30.d  exercicio31.d  exercicio32.d  exercicio33.d  exercicio34.d  exercicio35.d  (+27 more)
ProgramasCFonte/Debug/Personal/: subdir.mk  zeno_paradox.d
ProgramasCFonte/Debug/beecrowd/: a_viagem.d  attack_on_gasparini.d  bingo.d  carrega_ou_nao_carrega.d  chuva_caindo.d  comparacao_de_substring.d  contando_uns.d  coral_perfeito.d  crescimento_das_populacoes_de_bacilos.d  entrada_e_saida_de_numeros_reais.d  entrada_e_saida_de_varios_tipos.d  estacionamento.d  excel_bug.d  fibonacci_de_novo.d  fibonot.d  getline_one.d  jogo_das_aranhas.d  o_criptografo_envergonhado.d  o_salao_do_clube.d  onde_estao_meus_genes.d  preparando_a_producao.d  primo_rapido.d  salario_com_bonus.d  subdir.mk  tamanho_da_placa.d  troca_de_cartas.d
ProgramasCFonte/GeekUniversity/secao09/: exercicio60.c  exercicio73.c
ProgramasCFonte/GeekUniversity/secao11/: exercicio01.c
ProgramasCFonte/GeekUniversity/secao20/: projecto_game.c
ProgramasCFonte/Personal/: prime_numbers.c
ProgramasCFonte/beecrowd/: attack_on_gasparini.c  jogo_das_aranhas.c
(+795 files in other folders)
