cmake_minimum_required(VERSION 3.26)
project(C C)

set(CMAKE_C_STANDARD 11)

include_directories(ProgramasCFonte/GeekUniversity/secao09)

add_executable(C
    ProgramasC/exercicio10.c
    ProgramasCFonte/beecrowd/a_viagem.c
    ProgramasCFonte/beecrowd/attack_on_gasparini.c
    ProgramasCFonte/beecrowd/carrega_ou_nao_carrega.c
    ProgramasCFonte/beecrowd/chuva_caindo.c
    ProgramasCFonte/beecrowd/entrada_e_saida_de_numeros_reais.c
    ProgramasCFonte/beecrowd/entrada_e_saida_de_varios_tipos.c
    ProgramasCFonte/beecrowd/excel_bug.c
    ProgramasCFonte/beecrowd/fibonot.c
    ProgramasCFonte/beecrowd/jogo_das_aranhas.c
    ProgramasCFonte/beecrowd/o_criptografo_envergonhado.c
    ProgramasCFonte/beecrowd/preparando_a_producao.c
    ProgramasCFonte/beecrowd/salario_com_bonus.c
    ProgramasCFonte/beecrowd/tamanho_da_placa.c
    ProgramasCFonte/CodeAbbey/problem022.c
    ProgramasCFonte/CodeAbbey/problem297.c
    ProgramasCFonte/CodeAbbey/problem359.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio01.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio02.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio03.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio04.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio05.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio06.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio07.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio08.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio09.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio10.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio11.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio12.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio13.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio14.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio15.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio16.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio17.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio18.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio19.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio20.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio21.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio22.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio23.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio24.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio25.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio26.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio27.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio28.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio29.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio30.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio31.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio32.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio33.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio34.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio35.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio36.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio37.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio38.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio39.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio40.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio41.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio42.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio43.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio44.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio45.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio46.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio47.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio48.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio49.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio50.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio51.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio52.c
    ProgramasCFonte/GeekUniversity/secao03/exercicio53.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio01.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio02.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio03.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio04.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio05.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio06.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio07.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio08.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio09.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio10.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio11.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio12.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio13.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio14.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio15.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio16.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio17.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio18.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio19.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio20.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio21.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio22.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio23.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio24.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio25.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio26.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio27.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio28.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio29.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio30.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio31.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio32.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio33.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio34.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio35.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio36.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio37.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio39.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio40.c
    ProgramasCFonte/GeekUniversity/secao04/exercicio41.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio01.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio02.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio03.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio04.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio05.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio06.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio07.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio08.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio09.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio10.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio11.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio12.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio13.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio14.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio15.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio16.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio17.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio18.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio19.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio20.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio21.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio22.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio23.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio24.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio25.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio26.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio27.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio28.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio29.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio30.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio31.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio32.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio33.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio34.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio35.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio36.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio37.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio38.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio39.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio40.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio41.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio42.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio43.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio44.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio45.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio46.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio47.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio48.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio49.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio50.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio51.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio52.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio53.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio54.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio55.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio56.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio57.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio58.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio59.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio60.c
    ProgramasCFonte/GeekUniversity/secao05/exercicio61.c
    ProgramasCFonte/GeekUniversity/secao06/programa07.c
    ProgramasCFonte/GeekUniversity/secao06/programa08.c
    ProgramasCFonte/GeekUniversity/secao06/programa09.c
    ProgramasCFonte/GeekUniversity/secao06/programa10.c
    ProgramasCFonte/GeekUniversity/secao06/programa11.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio01.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio02.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio03.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio04.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio05.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio06.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio07.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio08.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio09.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio10.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio11.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio12.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio13.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio14.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio15.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio16.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio17.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio18.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio19.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio20.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio21.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio22.c
    ProgramasCFonte/GeekUniversity/secao07/matrizes/exercicio23.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio01.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio02.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio03.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio04.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio05.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio06.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio07.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio08.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio09.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio10.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio11.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio12.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio13.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio14.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio15.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio16.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio17.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio18.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio19.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio20.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio21.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio22.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio23.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio24.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio25.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio26.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio27.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio28.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio29.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio30.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio31.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio32.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio33.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio34.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio35.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio36.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio37.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio38.c
    ProgramasCFonte/GeekUniversity/secao07/vetores/exercicio39.c
    ProgramasCFonte/GeekUniversity/secao07/programa13.c
    ProgramasCFonte/GeekUniversity/secao07/programa14.c
    ProgramasCFonte/GeekUniversity/secao07/programa15.c
    ProgramasCFonte/GeekUniversity/secao08/03-usando-numeros-binarios.c
    ProgramasCFonte/GeekUniversity/secao08/programa16.c
    ProgramasCFonte/GeekUniversity/secao09/ajuda.c
    ProgramasCFonte/GeekUniversity/secao09/ajuda.h
    ProgramasCFonte/GeekUniversity/secao09/exercicio01.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio02.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio03.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio04.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio05.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio06.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio07.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio08.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio09.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio10.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio11.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio12.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio13.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio14.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio15.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio16.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio17.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio18.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio19.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio20.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio21.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio22.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio23.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio24.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio25.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio26.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio27.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio28.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio29.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio30.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio31.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio32.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio33.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio34.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio35.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio36.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio37.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio38.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio39.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio40.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio41.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio42.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio43.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio44.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio45.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio46.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio47.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio48.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio49.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio50.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio51.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio52.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio53.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio54.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio55.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio56.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio57.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio58.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio59.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio60.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio61.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio62.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio63.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio64.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio65.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio66.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio67.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio68.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio69.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio70.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio71.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio72.c
    ProgramasCFonte/GeekUniversity/secao09/exercicio73.c
    ProgramasCFonte/GeekUniversity/secao09/programa17.c
    ProgramasCFonte/GeekUniversity/secao09/programa18.c
    ProgramasCFonte/GeekUniversity/secao09/programa19.c
    ProgramasCFonte/GeekUniversity/secao09/programa20.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio01.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio02.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio03.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio04.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio05.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio06.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio07.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio08.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio09.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio10.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio11.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio12.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio13.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio14.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio15.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio16.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio17.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio18_test.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio19.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio20.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio21.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio22.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio23.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio24.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio25.c
    ProgramasCFonte/GeekUniversity/secao10/parte01/exercicio26.c
    ProgramasCFonte/GeekUniversity/secao10/parte02/exercicio03.c
    ProgramasCFonte/GeekUniversity/secao10/parte02/exercicio04.c
    ProgramasCFonte/GeekUniversity/secao10/parte02/exercicio05.c
    ProgramasCFonte/GeekUniversity/secao10/programa21.c
    ProgramasCFonte/GeekUniversity/secao10/programa22.c
    ProgramasCFonte/GeekUniversity/secao10/programa23.c
    ProgramasCFonte/GeekUniversity/secao11/exercicio01.c
    ProgramasCFonte/GeekUniversity/secao11/exercicio02.c
    ProgramasCFonte/GeekUniversity/secao11/exercicio03.c
    ProgramasCFonte/GeekUniversity/secao11/exercicio04.c
    ProgramasCFonte/GeekUniversity/secao11/exercicio05.c
    ProgramasCFonte/GeekUniversity/secao11/exercicio06.c
    ProgramasCFonte/GeekUniversity/secao11/exercicio07.c
    ProgramasCFonte/GeekUniversity/secao11/exercicio08.c
    ProgramasCFonte/GeekUniversity/secao11/exercicio09.c
    ProgramasCFonte/GeekUniversity/secao11/exercicio11.c
    ProgramasCFonte/GeekUniversity/secao11/programa24.c
    ProgramasCFonte/GeekUniversity/secao11/programa25.c
    ProgramasCFonte/GeekUniversity/secao11/programa26.c
    ProgramasCFonte/GeekUniversity/secao11/programa27.c
    ProgramasCFonte/GeekUniversity/secao11/programa28.c
    ProgramasCFonte/GeekUniversity/secao11/programa29.c
    ProgramasCFonte/Personal/zeno_paradox.c
    ProgramasCFonte/teste01.c)
